Assignment ONE/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_myFirstVM_name": {
            "defaultValue": "myFirstVM",
            "type": "String"
        },
        "networkInterfaces_myfirstvm966_name": {
            "defaultValue": "myfirstvm966",
            "type": "String"
        },
        "publicIPAddresses_myFirstVM_ip_name": {
            "defaultValue": "myFirstVM-ip",
            "type": "String"
        },
        "networkInterfaces_firstNetworkInf_name": {
            "defaultValue": "firstNetworkInf",
            "type": "String"
        },
        "networkInterfaces_secondNetworkInf_name": {
            "defaultValue": "secondNetworkInf",
            "type": "String"
        },
        "networkSecurityGroups_myFirstVM_nsg_name": {
            "defaultValue": "myFirstVM-nsg",
            "type": "String"
        },
        "storageAccounts_myfirstresourcegrpdiag_name": {
            "defaultValue": "myfirstresourcegrpdiag",
            "type": "String"
        },
        "virtualNetworks_myFirstResourceGrp_vnet_name": {
            "defaultValue": "myFirstResourceGrp-vnet",
            "type": "String"
        },
        "securityRules_RDP_name": {
            "defaultValue": "RDP",
            "type": "String"
        },
        "securityRules_HTTP_name": {
            "defaultValue": "HTTP",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "virtualMachines_myFirstVM_id": {
            "defaultValue": "/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Compute/disks/myFirstVM_OsDisk_1_27e39a6b15204dc4b92b318e505bfcc8",
            "type": "String"
        },
        "virtualMachines_myFirstVM_id_1": {
            "defaultValue": "/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/MYFIRSTRESOURCEGRP/providers/Microsoft.Compute/disks/firstManagedDisk",
            "type": "String"
        },
        "virtualMachines_myFirstVM_id_2": {
            "defaultValue": "/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/MYFIRSTRESOURCEGRP/providers/Microsoft.Compute/disks/secondDisk",
            "type": "String"
        },
        "virtualMachines_myFirstVM_id_3": {
            "defaultValue": "/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/MYFIRSTRESOURCEGRP/providers/Microsoft.Compute/disks/thirdManagedDisk",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Compute/virtualMachines/myFirstVM'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_myFirstVM_name')]",
            "apiVersion": "2018-06-01",
            "location": "centralus",
            "tags": {
                "AssignmentOne": "One"
            },
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_myFirstVM_name'),'_OsDisk_1_27e39a6b15204dc4b92b318e505bfcc8')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[parameters('virtualMachines_myFirstVM_id')]"
                        }
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "firstManagedDisk",
                            "createOption": "Attach",
                            "caching": "ReadWrite",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[parameters('virtualMachines_myFirstVM_id_1')]"
                            },
                            "diskSizeGB": 1023
                        },
                        {
                            "lun": 1,
                            "name": "secondDisk",
                            "createOption": "Attach",
                            "caching": "ReadOnly",
                            "managedDisk": {
                                "storageAccountType": "StandardSSD_LRS",
                                "id": "[parameters('virtualMachines_myFirstVM_id_2')]"
                            },
                            "diskSizeGB": 1023
                        },
                        {
                            "lun": 2,
                            "name": "thirdManagedDisk",
                            "createOption": "Attach",
                            "caching": "ReadOnly",
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS",
                                "id": "[parameters('virtualMachines_myFirstVM_id_3')]"
                            },
                            "diskSizeGB": 1023
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_myFirstVM_name')]",
                    "adminUsername": "piyush",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myfirstvm966_name'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_firstNetworkInf_name'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_myfirstresourcegrpdiag_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_myfirstvm966_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_firstNetworkInf_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_myfirstresourcegrpdiag_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/networkInterfaces/firstNetworkInf'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_firstNetworkInf_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "266fb38b-96a0-4fc1-a8c4-a0abe932fd88",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"3c286ccb-7d22-4f74-917e-aa0a2e6a8717\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myFirstResourceGrp_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": false,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myFirstResourceGrp_vnet_name'), parameters('subnets_default_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/networkInterfaces/myfirstvm966'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_myfirstvm966_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "880b9091-d54f-427b-9c24-fca527f4c181",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"31e91a6b-e8c7-4a78-b21f-7c1e6c9997b4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myFirstVM_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myFirstResourceGrp_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myFirstVM_nsg_name'))]"
                },
                "primary": true,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_myFirstVM_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myFirstResourceGrp_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myFirstVM_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/networkInterfaces/secondNetworkInf'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_secondNetworkInf_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "237f7dab-4f21-4f99-b407-403f1580f6c0",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"eb9b1ef9-4076-42aa-884b-533503074532\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.6",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myFirstResourceGrp_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "cottxvpnvb0uhkumx2xm43hzvg.gx.internal.cloudapp.net"
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_myFirstResourceGrp_vnet_name'), parameters('subnets_default_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/networkSecurityGroups/myFirstVM-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_myFirstVM_nsg_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "bc6e68b7-dd55-4df7-b0eb-8108e4d3dd10",
                "securityRules": [
                    {
                        "name": "RDP",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"38c12976-5fa1-4974-838e-afa4a6d31b2c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/publicIPAddresses/myFirstVM-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_myFirstVM_ip_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "0338595b-595d-4570-b25e-bf4762ddd2fc",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/virtualNetworks/myFirstResourceGrp-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_myFirstResourceGrp_vnet_name')]",
            "apiVersion": "2018-08-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "d53ba713-a8ed-4375-aa8c-bf2ecf74f9ae",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"d6553884-4b76-4eeb-b209-a37007a524a3\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24",
                            "delegations": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Storage/storageAccounts/myfirstresourcegrpdiag'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_myfirstresourcegrpdiag_name')]",
            "apiVersion": "2018-07-01",
            "location": "centralus",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/networkSecurityGroups/myFirstVM-nsg/securityRules/RDP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_myFirstVM_nsg_name'), '/', parameters('securityRules_RDP_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myFirstVM_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/networkSecurityGroups/myFirstVM-nsg/securityRules/HTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_myFirstVM_nsg_name'), '/', parameters('securityRules_HTTP_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 320,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_myFirstVM_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9573cc06-9176-4ccc-b1ae-bff8b96193d8/resourceGroups/myFirstResourceGrp/providers/Microsoft.Network/virtualNetworks/myFirstResourceGrp-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_myFirstResourceGrp_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "delegations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_myFirstResourceGrp_vnet_name'))]"
            ]
        }
    ]
}
